--- a/Planet-Swap/View/LaunchScreen.storyboard
+++ b/Planet-Swap/View/LaunchScreen.storyboard
@@ -16,16 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="thr-yb-z25">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="thr-yb-z25">
+                                <rect key="frame" x="-77" y="-69" width="528" height="804"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Planet Swap" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cm2-2n-QJ7">
+                                <rect key="frame" x="85" y="179" width="205" height="173"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="64"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="thr-yb-z25" secondAttribute="trailing" id="0Yk-op-Sbr"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="thr-yb-z25" secondAttribute="bottom" id="FXS-f4-xfH"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="bHm-5w-uXH"/>
-                            <constraint firstItem="thr-yb-z25" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mnU-3N-lrW"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="-77" id="2YU-u9-ISU"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="-69" id="7hS-cN-MUK"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="-69" id="Ih3-PA-WFG"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" constant="76" id="SbL-im-l3A"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" constant="68" id="iga-xt-gb1"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="-77" id="iuu-5e-gFV"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" constant="76" id="l5s-E1-a88"/>
+                            <constraint firstItem="thr-yb-z25" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" constant="68" id="sFQ-MK-ha5"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
